--- a/inputexamples-front/package.json
+++ b/inputexamples-front/package.json
@@ -6,8 +6,10 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "date-fns": "^2.27.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-nice-dates": "^3.1.0",
     "react-scripts": "4.0.3",
     "react-select": "^5.2.1",
     "web-vitals": "^1.1.2"
